# r-inla

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindGFortranLibs.cmake  FindPardiso.cmake
extlibs/: CMakeLists.txt
fmesher/: CMakeLists.txt
fmesher/src/: CMakeLists.txt
gmrflib/: CMakeLists.txt
gmrflib/examples/: CMakeLists.txt
inlaprog/src/: CMakeLists.txt  eval.c  rmath.h
